latest rev to include a login page. Hoping to use OAuth for login

--- a/staticpages/contact.html
+++ b/staticpages/contact.html
@@ -64,8 +64,8 @@
     	<img src="Images/Logo.PNG" alt="Logo" Width="50%"><br/>
 		<a href="index.html"><img src="Buttons/homeButton.jpg" alt="Homepage" Width="24%"></a>
 		<!-- Onclick below demonstrates use of events -->
-		<a href="sales.html" onclick="return confirm('Please Login')"><img src="Buttons/salesButton.jpg" alt="Sales" Width="24%"></a>
-		<a href="admin.html" onclick="return confirm('Please Login')"><img src="Buttons/adminButton.jpg" alt="Administration" Width="24%"></a>
+		<a href="login.html"><img src="Buttons/salesButton.jpg" alt="Sales" Width="24%"></a>
+		<a href="login.html"><img src="Buttons/adminButton.jpg" alt="Administration" Width="24%"></a>
 		<a href="contact.html"><img src="Buttons/contactButton.jpg" alt="Contact" Width="24%"></a>
 		<hr/>
 
@@ -76,7 +76,7 @@
 	
     	<!-- Create a div to position carparkPic using using float in CSS contained in Head -->
     	<div class="carparkPic">
-			<a href="Home.html" onclick="return confirm('Please Login')"><img src="Images/carParkpic.jpg" alt="carpark" width="100%" title="carpark"></a> 	
+			<img src="Images/carParkpic.jpg" alt="carpark" width="100%" title="cars for sale"> 	
 		</div>
 	
 		<!-- Create a div to position intro using using clear in CSS contained in Head -->
