--- a/staticpages/admin.html
+++ b/staticpages/admin.html
@@ -73,7 +73,7 @@
 
 		<!-- Create a div to edit and position the quote using CSS contained in Head -->
 		<div class="quote">
-			<h3><i>"Welcome to MotorCity, the App server used to access all cars for sale under the MotorCity umbrella, with dealerships all around the country. All cars available for sale are listed below. To learn more about any car please login using the salesman login. To create, edit or delete cars from the list, please use the Administrator password"</i></h3>
+			<h3><i>"Welcome to MotorCity Admin, the App server used to access all cars for sale under the MotorCity umbrella, with dealerships all around the country. All cars available for sale are listed below. To learn more about any car please login using the salesman login. To create, edit or delete cars from the list, please use the Administrator password"</i></h3>
 		</div>
 	
     	<!-- Create a div to position carparkPic using using float in CSS contained in Head -->
