Having problems saving changes. Saving the file wont save changes. Trying commit to save

--- a/staticpages/admin.html
+++ b/staticpages/admin.html
@@ -73,7 +73,7 @@
 
 		<!-- Create a div to edit and position the quote using CSS contained in Head -->
 		<div class="quote">
-			<h3><i>"Welcome to MotorCity Admin, the App server used to access all cars for sale under the MotorCity umbrella, with dealerships all around the country. All cars available for sale are listed below. To learn more about any car please login using the salesman login. To create, edit or delete cars from the list, please use the Administrator password"</i></h3>
+			<h3><i>"Welcome to MotorCity Admin page. This page is used to Create or delete a record in the cars or suppliers tables"</i></h3>
 		</div>
 	
     	<!-- Create a div to position carparkPic using using float in CSS contained in Head -->
@@ -85,7 +85,7 @@
 		<div class="display">
 			<table class="table" id="carTable">
             	<tr>
-                	<th>New/Used</th><th>Make</th><th>Model</th><th>Year</th><th>Fuel</th><th>Colour</th><th>Price</th><th>Supplier</th><th>Location</th><th>Phone</th>
+                	<th>cid</th><th>Chassis ID</th><th>New/Used</th><th>Make</th><th>Model</th><th>Year</th><th>Mileage</th><th>Fuel</th><th>Colour</th><th>Price</th><th>Supplier</th><th>Location</th><th>Phone</th>
             	</tr>
 			   </table>
 		</div>
