--- a/staticpages/contact.html
+++ b/staticpages/contact.html
@@ -64,8 +64,8 @@
     	<img src="Images/Logo.PNG" alt="Logo" Width="50%"><br/>
 		<a href="index.html"><img src="Buttons/homeButton.jpg" alt="Homepage" Width="24%"></a>
 		<!-- Onclick below demonstrates use of events -->
-		<a href="login.html"><img src="Buttons/salesButton.jpg" alt="Sales" Width="24%"></a>
-		<a href="login.html"><img src="Buttons/adminButton.jpg" alt="Administration" Width="24%"></a>
+		<a href="sales.html"><img src="Buttons/salesButton.jpg" alt="Administration" Width="24%"></a>
+		<a href="admin.html"><img src="Buttons/adminButton.jpg" alt="Administration" Width="24%"></a>
 		<a href="contact.html"><img src="Buttons/contactButton.jpg" alt="Contact" Width="24%"></a>
 		<hr/>
 
